--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-rdkit
-pandas
-datetime
-numpy
-configparser
-scipy
-openpyxl
-PySimpleGUI
-seaborn
+matplotlib==3.5.2
+natsort==8.2.0
+numpy==1.22.4
+openpyxl==3.0.10
+pandas==1.4.2
+Pillow==9.4.0
+PySimpleGUI==4.60.4
+rdkit==2022.9.4
+rdkit_pypi==2022.3.2.1
+scipy==1.8.1
+seaborn==0.11.2
