--- a/config.ini
+++ b/config.ini
@@ -166,7 +166,13 @@ m+tfa-h = 112.985586,1,True
 2m+hac-h = 59.013851,2,True
 3m-h = 1.007276,3,True
 
+[bio_method_headline]
+original = Original
+normalised = Background Correction
+pora = Normalised
+
 [Settings_bio]
+outliers = True
 final_report_methods_original = False
 final_report_methods_normalised = False
 final_report_methods_pora = True
@@ -202,12 +208,36 @@ final_report_calc_pora_negative = False
 final_report_calc_pora_positive = False
 final_report_calc_pora_blank = False
 final_report_calc_z_prime = True
-final_report_pora_threshold_low_min = -200.0
-final_report_pora_threshold_low_max = 0.0
-final_report_pora_threshold_mid_min = 0.0
-final_report_pora_threshold_mid_max = 30.0
-final_report_pora_threshold_high_min = 120.0
-final_report_pora_threshold_high_max = 200.0
+final_report_pora_threshold_th_1_min = 0
+final_report_pora_threshold_th_1_max = 10
+final_report_pora_threshold_th_1_use = True
+final_report_pora_threshold_th_2_min = 10
+final_report_pora_threshold_th_2_max = 20
+final_report_pora_threshold_th_2_use = True
+final_report_pora_threshold_th_3_min = 20
+final_report_pora_threshold_th_3_max = 30
+final_report_pora_threshold_th_3_use = True
+final_report_pora_threshold_th_4_min = 30
+final_report_pora_threshold_th_4_max = 40
+final_report_pora_threshold_th_4_use = True
+final_report_pora_threshold_th_5_min = 40
+final_report_pora_threshold_th_5_max = 50
+final_report_pora_threshold_th_5_use = True
+final_report_pora_threshold_th_6_min = 50
+final_report_pora_threshold_th_6_max = 60
+final_report_pora_threshold_th_6_use = True
+final_report_pora_threshold_th_7_min = 60
+final_report_pora_threshold_th_7_max = 70
+final_report_pora_threshold_th_7_use = True
+final_report_pora_threshold_th_8_min = 70
+final_report_pora_threshold_th_8_max = 80
+final_report_pora_threshold_th_8_use = True
+final_report_pora_threshold_th_9_min = 80
+final_report_pora_threshold_th_9_max = 90
+final_report_pora_threshold_th_9_use = True
+final_report_pora_threshold_th_10_min = 90
+final_report_pora_threshold_th_10_max = 100
+final_report_pora_threshold_th_10_use = True
 final_report_data_sample_matrix = False
 final_report_data_sample_list = False
 final_report_data_sample_max_min = False
@@ -246,6 +276,10 @@ plate_report_well_states_report_blank = False
 plate_report_calc_dict_original_use = True
 plate_report_calc_dict_original_avg = True
 plate_report_calc_dict_original_stdev = True
+plate_report_calc_dict_original_pstdev = True
+plate_report_calc_dict_original_pvariance = True
+plate_report_calc_dict_original_variance = True
+plate_report_calc_dict_original_st_dev_% = True
 plate_report_calc_dict_original_state_sample = True
 plate_report_calc_dict_original_state_minimum = True
 plate_report_calc_dict_original_state_max = True
@@ -256,6 +290,10 @@ plate_report_calc_dict_original_state_blank = True
 plate_report_calc_dict_normalised_use = True
 plate_report_calc_dict_normalised_avg = True
 plate_report_calc_dict_normalised_stdev = True
+plate_report_calc_dict_normalised_pstdev = True
+plate_report_calc_dict_normalised_pvariance = True
+plate_report_calc_dict_normalised_variance = True
+plate_report_calc_dict_normalised_st_dev_% = True
 plate_report_calc_dict_normalised_state_sample = True
 plate_report_calc_dict_normalised_state_minimum = True
 plate_report_calc_dict_normalised_state_max = True
@@ -266,6 +304,10 @@ plate_report_calc_dict_normalised_state_blank = True
 plate_report_calc_dict_pora_use = True
 plate_report_calc_dict_pora_avg = True
 plate_report_calc_dict_pora_stdev = True
+plate_report_calc_dict_pora_pstdev = True
+plate_report_calc_dict_pora_pvariance = True
+plate_report_calc_dict_pora_variance = True
+plate_report_calc_dict_pora_st_dev_% = True
 plate_report_calc_dict_pora_state_sample = True
 plate_report_calc_dict_pora_state_minimum = True
 plate_report_calc_dict_pora_state_max = True
@@ -288,6 +330,10 @@ plate_report_calc_dict_other_calc_z_prime = True
 plate_report_plate_calc_dict_original_use = True
 plate_report_plate_calc_dict_original_avg = True
 plate_report_plate_calc_dict_original_stdev = True
+plate_report_plate_calc_dict_original_pstdev = True
+plate_report_plate_calc_dict_original_pvariance = True
+plate_report_plate_calc_dict_original_variance = True
+plate_report_plate_calc_dict_original_st_dev_% = True
 plate_report_plate_calc_dict_original_state_sample = True
 plate_report_plate_calc_dict_original_state_minimum = True
 plate_report_plate_calc_dict_original_state_max = True
@@ -298,6 +344,10 @@ plate_report_plate_calc_dict_original_state_blank = True
 plate_report_plate_calc_dict_normalised_use = True
 plate_report_plate_calc_dict_normalised_avg = True
 plate_report_plate_calc_dict_normalised_stdev = True
+plate_report_plate_calc_dict_normalised_pstdev = True
+plate_report_plate_calc_dict_normalised_pvariance = True
+plate_report_plate_calc_dict_normalised_variance = True
+plate_report_plate_calc_dict_normalised_st_dev_% = True
 plate_report_plate_calc_dict_normalised_state_sample = True
 plate_report_plate_calc_dict_normalised_state_minimum = True
 plate_report_plate_calc_dict_normalised_state_max = True
@@ -308,6 +358,10 @@ plate_report_plate_calc_dict_normalised_state_blank = True
 plate_report_plate_calc_dict_pora_use = True
 plate_report_plate_calc_dict_pora_avg = True
 plate_report_plate_calc_dict_pora_stdev = True
+plate_report_plate_calc_dict_pora_pstdev = True
+plate_report_plate_calc_dict_pora_pvariance = True
+plate_report_plate_calc_dict_pora_variance = True
+plate_report_plate_calc_dict_pora_st_dev_% = True
 plate_report_plate_calc_dict_pora_state_sample = True
 plate_report_plate_calc_dict_pora_state_minimum = True
 plate_report_plate_calc_dict_pora_state_max = True
@@ -318,6 +372,10 @@ plate_report_plate_calc_dict_pora_state_blank = True
 plate_report_plate_calc_dict_pora_internal_use = False
 plate_report_plate_calc_dict_pora_internal_avg = True
 plate_report_plate_calc_dict_pora_internal_stdev = True
+plate_report_plate_calc_dict_pora_internal_pstdev = True
+plate_report_plate_calc_dict_pora_internal_pvariance = True
+plate_report_plate_calc_dict_pora_internal_variance = True
+plate_report_plate_calc_dict_pora_internal_st_dev_% = True
 plate_report_plate_calc_dict_pora_internal_state_sample = True
 plate_report_plate_calc_dict_pora_internal_state_minimum = True
 plate_report_plate_calc_dict_pora_internal_state_max = True
@@ -347,15 +405,46 @@ plate_report_z_prime_calc = True
 plate_report_heatmap_colours_low = #FF6666
 plate_report_heatmap_colours_mid = #FFFF00
 plate_report_heatmap_colours_high = #00FF00
-plate_report_pora_threshold_low_min = -200.0
-plate_report_pora_threshold_low_max = 0.0
-plate_report_pora_threshold_mid_min = 0.0
-plate_report_pora_threshold_mid_max = 30.0
-plate_report_pora_threshold_high_min = 120.0
-plate_report_pora_threshold_high_max = 200.0
-plate_report_pora_threshold_colour_low = #00FF00
-plate_report_pora_threshold_colour_mid = #FFFF00
-plate_report_pora_threshold_colour_high = #0000FF
+plate_report_pora_threshold_th_1_min = 0
+plate_report_pora_threshold_th_1_max = 10
+plate_report_pora_threshold_th_1_use = True
+plate_report_pora_threshold_th_2_min = 10
+plate_report_pora_threshold_th_2_max = 20
+plate_report_pora_threshold_th_2_use = True
+plate_report_pora_threshold_th_3_min = 20
+plate_report_pora_threshold_th_3_max = 30
+plate_report_pora_threshold_th_3_use = True
+plate_report_pora_threshold_th_4_min = 30
+plate_report_pora_threshold_th_4_max = 40
+plate_report_pora_threshold_th_4_use = True
+plate_report_pora_threshold_th_5_min = 40
+plate_report_pora_threshold_th_5_max = 50
+plate_report_pora_threshold_th_5_use = True
+plate_report_pora_threshold_th_6_min = 50
+plate_report_pora_threshold_th_6_max = 60
+plate_report_pora_threshold_th_6_use = True
+plate_report_pora_threshold_th_7_min = 60
+plate_report_pora_threshold_th_7_max = 70
+plate_report_pora_threshold_th_7_use = True
+plate_report_pora_threshold_th_8_min = 70
+plate_report_pora_threshold_th_8_max = 80
+plate_report_pora_threshold_th_8_use = True
+plate_report_pora_threshold_th_9_min = 80
+plate_report_pora_threshold_th_9_max = 90
+plate_report_pora_threshold_th_9_use = True
+plate_report_pora_threshold_th_10_min = 90
+plate_report_pora_threshold_th_10_max = 100
+plate_report_pora_threshold_th_10_use = True
+plate_report_pora_threshold_colour_th_1 = #00FF00
+plate_report_pora_threshold_colour_th_2 = #00FF00
+plate_report_pora_threshold_colour_th_3 = #FFFF00
+plate_report_pora_threshold_colour_th_4 = #0000FF
+plate_report_pora_threshold_colour_th_5 = #00FF00
+plate_report_pora_threshold_colour_th_6 = #FFFF00
+plate_report_pora_threshold_colour_th_7 = #0000FF
+plate_report_pora_threshold_colour_th_8 = #00FF00
+plate_report_pora_threshold_colour_th_9 = #FFFF00
+plate_report_pora_threshold_colour_th_10 = #0000FF
 plate_report_well_states_report_method_original = True
 plate_report_well_states_report_method_normalised = True
 plate_report_well_states_report_method_pora = True
