--- a/config.ini
+++ b/config.ini
@@ -405,46 +405,46 @@ plate_report_z_prime_calc = True
 plate_report_heatmap_colours_low = #FF6666
 plate_report_heatmap_colours_mid = #FFFF00
 plate_report_heatmap_colours_high = #00FF00
-plate_report_pora_threshold_th_1_min = 0
-plate_report_pora_threshold_th_1_max = 10
+plate_report_pora_threshold_th_1_min = 0.0
+plate_report_pora_threshold_th_1_max = 10.0
 plate_report_pora_threshold_th_1_use = True
-plate_report_pora_threshold_th_2_min = 10
-plate_report_pora_threshold_th_2_max = 20
+plate_report_pora_threshold_th_2_min = 10.0
+plate_report_pora_threshold_th_2_max = 20.0
 plate_report_pora_threshold_th_2_use = True
-plate_report_pora_threshold_th_3_min = 20
-plate_report_pora_threshold_th_3_max = 30
+plate_report_pora_threshold_th_3_min = 20.0
+plate_report_pora_threshold_th_3_max = 30.0
 plate_report_pora_threshold_th_3_use = True
-plate_report_pora_threshold_th_4_min = 30
-plate_report_pora_threshold_th_4_max = 40
+plate_report_pora_threshold_th_4_min = 30.0
+plate_report_pora_threshold_th_4_max = 40.0
 plate_report_pora_threshold_th_4_use = True
-plate_report_pora_threshold_th_5_min = 40
-plate_report_pora_threshold_th_5_max = 50
+plate_report_pora_threshold_th_5_min = 40.0
+plate_report_pora_threshold_th_5_max = 50.0
 plate_report_pora_threshold_th_5_use = True
-plate_report_pora_threshold_th_6_min = 50
-plate_report_pora_threshold_th_6_max = 60
+plate_report_pora_threshold_th_6_min = 50.0
+plate_report_pora_threshold_th_6_max = 60.0
 plate_report_pora_threshold_th_6_use = True
-plate_report_pora_threshold_th_7_min = 60
-plate_report_pora_threshold_th_7_max = 70
+plate_report_pora_threshold_th_7_min = 60.0
+plate_report_pora_threshold_th_7_max = 70.0
 plate_report_pora_threshold_th_7_use = True
-plate_report_pora_threshold_th_8_min = 70
-plate_report_pora_threshold_th_8_max = 80
+plate_report_pora_threshold_th_8_min = 70.0
+plate_report_pora_threshold_th_8_max = 80.0
 plate_report_pora_threshold_th_8_use = True
-plate_report_pora_threshold_th_9_min = 80
-plate_report_pora_threshold_th_9_max = 90
+plate_report_pora_threshold_th_9_min = 80.0
+plate_report_pora_threshold_th_9_max = 90.0
 plate_report_pora_threshold_th_9_use = True
-plate_report_pora_threshold_th_10_min = 90
-plate_report_pora_threshold_th_10_max = 100
+plate_report_pora_threshold_th_10_min = 90.0
+plate_report_pora_threshold_th_10_max = 100.0
 plate_report_pora_threshold_th_10_use = True
-plate_report_pora_threshold_colour_th_1 = #00FF00
-plate_report_pora_threshold_colour_th_2 = #00FF00
-plate_report_pora_threshold_colour_th_3 = #FFFF00
-plate_report_pora_threshold_colour_th_4 = #0000FF
-plate_report_pora_threshold_colour_th_5 = #00FF00
-plate_report_pora_threshold_colour_th_6 = #FFFF00
-plate_report_pora_threshold_colour_th_7 = #0000FF
-plate_report_pora_threshold_colour_th_8 = #00FF00
-plate_report_pora_threshold_colour_th_9 = #FFFF00
-plate_report_pora_threshold_colour_th_10 = #0000FF
+plate_report_pora_threshold_colour_th_1 = #a756ad
+plate_report_pora_threshold_colour_th_2 = #cf347a
+plate_report_pora_threshold_colour_th_3 = #53d033
+plate_report_pora_threshold_colour_th_4 = #4993ba
+plate_report_pora_threshold_colour_th_5 = #57bb48
+plate_report_pora_threshold_colour_th_6 = #99b053
+plate_report_pora_threshold_colour_th_7 = #0b8b07
+plate_report_pora_threshold_colour_th_8 = #b922f2
+plate_report_pora_threshold_colour_th_9 = #e43086
+plate_report_pora_threshold_colour_th_10 = #6d83a7
 plate_report_well_states_report_method_original = True
 plate_report_well_states_report_method_normalised = True
 plate_report_well_states_report_method_pora = True
