--- a/config.ini
+++ b/config.ini
@@ -32,6 +32,10 @@ main_import_folder = pending
 main_output_folder = output
 purity_data = purity_data
 
+[output_folders]
+output = C:/Users/phch/Desktop/more_data_files/ss_output
+
+
 [files]
 plate_layouts = plate_archive.txt
 bio_experiments = bio_experiments.txt
@@ -68,6 +72,13 @@ vendors = Name,Contact Person,E-mail
 origin = Name,A/C,Contact Person,E-mail
 plate_type = plate_type
 locations = Room,Building,Spot
+
+[worklist_headlines]
+destination_plates = destination_plates
+destination_well = destination_well
+volume = volume
+source_well = source_well
+source_plates = source_plates
 
 [plate_types]
 dmso = LDV
