Updated headlines in worklist generator to also use the one from PB

--- a/config.ini
+++ b/config.ini
@@ -33,7 +33,7 @@ main_output_folder = output
 purity_data = purity_data
 
 [output_folders]
-output = C:/Users/phch/Desktop/more_data_files/alpha_SO/ss_output
+output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO
 
 
 [files]
@@ -73,12 +73,19 @@ origin = Name,A/C,Contact Person,E-mail
 plate_type = plate_type
 locations = Room,Building,Spot
 
-[worklist_headlines]
+[worklist_headlines_v1]
 destination_plates = destination_plates
 destination_well = destination_well
 volume = volume
 source_well = source_well
 source_plates = source_plates
+
+[worklist_headlines_v2]
+destination_plates = DestinationBarcode
+destination_well = DestinationWell
+Volume = Volume
+source_well = SourceWell
+source_plates = SourceBarcode
 
 [plate_types]
 dmso = LDV
