update minor UI stuff for compounds

--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,8 @@
 [Database]
-database = C:/Users/phch/PycharmProjects/structure_search/SCore_2.db
+
 
 [Tables]
-bio_experiment_table = bio_experiment
-biological_data = biological
-compound_data_table = compound_data
-compound_dp_table = compound_dp
-compound_main = compound_main
-compound_mp_table = compound_mp
-compound_source = origin
-daughter_plate_table = dp_plates
-lc_experiment_table = lc_experiment
-location_table = locations
-mother_plate_table = mp_plates
-purity_data = purity
+
 
 [Responsible]
 elisa = Elisa
@@ -33,8 +22,6 @@ main_output_folder = output
 purity_data = purity_data
 
 [output_folders]
-output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO
-
 
 [files]
 plate_layouts = plate_archive.txt
@@ -83,7 +70,7 @@ source_plates = source_plates
 [worklist_headlines_v2]
 destination_plates = DestinationBarcode
 destination_well = DestinationWell
-Volume = Volume
+volume = Volume
 source_well = SourceWell
 source_plates = SourceBarcode
 
