Added Dose Response selector to plate-layout.

--- a/config.ini
+++ b/config.ini
@@ -104,6 +104,8 @@ positive = #09ca0e
 negative = #d20000
 empty = #1e0bc8
 paint = paint
+dose_low = #ee4b2b
+dose_high = #454b1b
 
 [bio_methode]
 original = 0
