more Dose Response stuff

--- a/config.ini
+++ b/config.ini
@@ -112,6 +112,22 @@ original = 0
 normalised = 1
 pora = 2
 
+[dose]
+n_neighb = 5
+max_std_resp_highdose_dp = 6
+max_std_resp_lowdose_dp = 6
+min_flat_lowdose_dp = 0
+min_flat_highdose_dp = 0
+min_rsquared = 0.8
+max_acceptable_doseconc_stepsize_at_EC50 = 35
+max_recommended_doseconc_stepsize_at_EC50 = 20
+weak_hillslope_range = -1,1
+min_curve_lowresp = 1
+max_lowdose_slope = 1
+max_highdose_slope = 1
+width_lowdose_slope = 0.3
+width_highdose_slope = 0.3
+
 [MS_default]
 uv_wavelength = all
 uv_wave = all
