--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-matplotlib==3.5.2
-natsort==8.2.0
-numpy==1.22.4
-openpyxl==3.0.10
-pandas==1.4.2
-Pillow==9.4.0
-PySimpleGUI==4.60.4
-rdkit==2022.9.4
-rdkit_pypi==2022.3.2.1
-scipy==1.8.1
-seaborn==0.11.2
-
 configparser~=5.2.0
+PySimpleGUI~=4.60.4
+matplotlib~=3.5.2
+Pillow~=9.4.0
+rdkit~=2022.9.4
+numpy~=1.22.4
+pandas~=1.4.2
 DateTime~=4.5
+scipy~=1.8.1
+natsort~=8.2.0
+openpyxl~=3.0.10
 PySide6~=6.5.1.1
+seaborn~=0.11.2
