Init Dose response approval popup-layout and the first few functions and logic have been setup.

--- a/config.ini
+++ b/config.ini
@@ -29,7 +29,7 @@ tab_colour = purple
 
 [folders]
 main_import_folder = pending
-main_output_folder = output
+output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO
 purity_data = purity_data
 
 [output_folders]
