--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Database]
-database = C:/Users/phch/PycharmProjects/structure_search/SCore_2.db
+database = Score_2.db
 
 [Tables]
 bio_experiment_table = bio_experiment
@@ -29,7 +29,7 @@ tab_colour = purple
 
 [folders]
 main_import_folder = pending
-output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO
+output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO\mol_formatic_output
 purity_data = purity_data
 
 [output_folders]
@@ -77,7 +77,7 @@ source_plates = source_plates
 [worklist_headlines_v2]
 destination_plates = DestinationBarcode
 destination_well = DestinationWell
-Volume = Volume
+volume = Volume
 source_well = SourceWell
 source_plates = SourceBarcode
 
@@ -113,8 +113,8 @@ max_std_resp_lowdose_dp = 6
 min_flat_lowdose_dp = 0
 min_flat_highdose_dp = 0
 min_rsquared = 0.8
-max_acceptable_doseconc_stepsize_at_EC50 = 35
-max_recommended_doseconc_stepsize_at_EC50 = 20
+max_acceptable_doseconc_stepsize_at_ec50 = 35
+max_recommended_doseconc_stepsize_at_ec50 = 20
 weak_hillslope_range = -1,1
 min_curve_lowresp = 1
 max_lowdose_slope = 1
