updating small stuff

--- a/config.ini
+++ b/config.ini
@@ -29,11 +29,11 @@ tab_colour = purple
 
 [folders]
 main_import_folder = pending
-output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO\mol_formatic_output
+output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\MolFormatic
 purity_data = purity_data
 
 [output_folders]
-output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\alpha_SO
+output = C:\Users\phch\OneDrive - Danmarks Tekniske Universitet\Mapper\Python_data\MolFormatic
 
 [files]
 plate_layouts = plate_archive.txt
